- Port 3 Tomcat patches (mostly the JNDI realm rewrite).