@@ -33,7 +33,6 @@ import org.apache.catalina.connector.ClientAbortException;
 import org.apache.catalina.connector.Request;
 import org.apache.catalina.connector.Response;
 import org.apache.catalina.deploy.ErrorPage;
-import org.apache.catalina.util.RequestUtil;
 import org.apache.catalina.util.StringManager;
 import org.apache.catalina.valves.ValveBase;
 import org.jboss.logging.Logger;
@@ -251,10 +250,10 @@ final class StandardHostValve
                 (ApplicationFilterFactory.DISPATCHER_REQUEST_PATH_ATTR,
                  errorPage.getLocation());
             request.setAttribute(ApplicationFilterFactory.DISPATCHER_TYPE_ATTR,
-                              new Integer(ApplicationFilterFactory.ERROR));
+                    Integer.valueOf(ApplicationFilterFactory.ERROR));
             request.setAttribute
                 (Globals.STATUS_CODE_ATTR,
-                 new Integer(HttpServletResponse.SC_INTERNAL_SERVER_ERROR));
+                        Integer.valueOf(HttpServletResponse.SC_INTERNAL_SERVER_ERROR));
             request.setAttribute(Globals.ERROR_MESSAGE_ATTR,
                               throwable.getMessage());
             request.setAttribute(Globals.EXCEPTION_ATTR,
@@ -320,9 +319,9 @@ final class StandardHostValve
         if (errorPage != null) {
             response.setAppCommitted(false);
             request.setAttribute(Globals.STATUS_CODE_ATTR,
-                              new Integer(statusCode));
+                              Integer.valueOf(statusCode));
 
-            String message = RequestUtil.filter(response.getMessage());
+            String message = response.getMessage();
             if (message == null)
                 message = "";
             request.setAttribute(Globals.ERROR_MESSAGE_ATTR, message);
@@ -330,7 +329,7 @@ final class StandardHostValve
                 (ApplicationFilterFactory.DISPATCHER_REQUEST_PATH_ATTR,
                  errorPage.getLocation());
             request.setAttribute(ApplicationFilterFactory.DISPATCHER_TYPE_ATTR,
-                              new Integer(ApplicationFilterFactory.ERROR));
+                    Integer.valueOf(ApplicationFilterFactory.ERROR));
 
 
             Wrapper wrapper = request.getWrapper();
